<resources>
    <string name="app_name">MobileAppCoursework2</string>
    <string name="add_phrases_btn">Add Phrases</string>
    <string name="display_phrases_btn">Display Phrases</string>
    <string name="edit_phrases_btn">Edit Phrases</string>
    <string name="language_subscription_btn">Language Subscription</string>
    <string name="translate_btn">Translate</string>
    <string name="exit_btn">Exit</string>
    <string name="savePhrase_button">Save</string>
    <string name="please_enter_the_phrase_label">Please enter the phrase:</string>
    <string name="save_btn">Save</string>
    <string name="enter_the_phrase_hint">Enter the phrase</string>
    <string name="result_textview">TextView</string>
    <string name="displaying_the_saved_phrases_in_database_label">Display saved phrases</string>
    <string name="displayResult_textView">TextView</string>
    <string name="add_pharses_to_database_main_lbl">Add Pharses to database</string>
    <string name="edit_the_saved_phrases_main_label">Edit the saved phrases</string>
    <string name="select_the_phrase_to_edit_hint">Select the phrase to edit</string>
    <string name="editPhrase_button">Edit</string>
    <string name="translate_and_pronounce_main_label">Translate and pronounce</string>
    <string name="translate_button">Translate</string>
    <string name="pronounce_button">Pronounce</string>
    <string name="selectedText_textview">TextView</string>
    <string name="tempTextBox_textView">TextView</string>
    <string name="subscribe_to_languages_main_label">Subscribe to languages</string>
    <string name="please_select_a_language_to_subscribe_label">Please select a language to subscribe :</string>
    <string name="please_select_a_language_to_subscribe_textView">Please select a language to subscribe:</string>

    <string name="country_prompt">Choose a country</string>
    <string name="select_language_button">Select language</string>
    <string-array name="languages_array">
        <item>Italian - it</item>
        <item>Spanish - es</item>
        <item>Greek - el</item>
        <item>French - fr</item>
        <item>German - de</item>


    </string-array>


</resources>
