<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <Button
        android:id="@+id/addPhrase_btn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/add_phrases_btn"
        android:onClick="add_phrases"
        app:layout_constraintBottom_toTopOf="@+id/displayPhrase_btn"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/displayPhrase_btn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/display_phrases_btn"
        android:onClick="display_phrases"
        app:layout_constraintBottom_toTopOf="@+id/editPhrase_btn"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/addPhrase_btn" />

    <Button
        android:id="@+id/editPhrase_btn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/edit_phrases_btn"
        android:onClick="edit_phrases"
        app:layout_constraintBottom_toTopOf="@+id/languageSubscribe_btn"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/displayPhrase_btn" />

    <Button
        android:id="@+id/languageSubscribe_btn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/language_subscription_btn"
        android:onClick="language_subscription"
        app:layout_constraintBottom_toTopOf="@+id/pronounce_btn"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/editPhrase_btn" />

    <Button
        android:id="@+id/pronounce_btn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/translate_btn"
        android:onClick="translate"
        app:layout_constraintBottom_toTopOf="@+id/exit_btn"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/languageSubscribe_btn" />

    <Button
        android:id="@+id/exit_btn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/exit_btn"
        android:onClick="exit"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/pronounce_btn" />
</androidx.constraintlayout.widget.ConstraintLayout>